# src/main/java/sgu/j2ee/medifamily/controllers/ShareProfileController.java
@@ -1,5 +1,6 @@
 package sgu.j2ee.medifamily.controllers;
 
+import java.util.List;
 import java.util.UUID;
 
 import org.springframework.http.ResponseEntity;
@@ -7,29 +8,41 @@ import org.springframework.web.bind.annotation.*;
 
 import lombok.RequiredArgsConstructor;
 import sgu.j2ee.medifamily.dtos.ShareProfileDto;
-import sgu.j2ee.medifamily.entities.ShareProfile;
+import sgu.j2ee.medifamily.dtos.ShareProfileQuery;
 import sgu.j2ee.medifamily.mappers.ShareProfileMapper;
-import sgu.j2ee.medifamily.repositories.SharePermissionRepository;
-import sgu.j2ee.medifamily.repositories.ShareProfileRepository;
+import sgu.j2ee.medifamily.services.ShareProfileService;
 
 @RestController
 @RequiredArgsConstructor
 @RequestMapping("/api/share-profile")
 public class ShareProfileController {
-	private final SharePermissionRepository sharePermissionRepository;
-	private final ShareProfileRepository shareProfileRepository;
+	private final ShareProfileService shareProfileService;
 	private final ShareProfileMapper shareProfileMapper;
 
 	@PostMapping("")
-	public ResponseEntity<ShareProfile> createShareProfile(ShareProfileDto shareProfile) {
-		return ResponseEntity.ok(shareProfileRepository.save(shareProfileMapper.toEntity(shareProfile)));
+	public ResponseEntity<ShareProfileDto> createShareProfile(@RequestBody ShareProfileDto shareProfile) {
+
+		return ResponseEntity.ok(
+				shareProfileMapper.toDto(shareProfileService.shareProfile(shareProfileMapper.toEntity(shareProfile))));
 	}
 
 	@GetMapping("{id}")
 	public ResponseEntity<ShareProfileDto> getShareProfile(@PathVariable UUID id) {
-		return shareProfileRepository.findById(id)
+		return shareProfileService.getShareProfileById(id)
 				.map(shareProfileMapper::toDto)
 				.map(ResponseEntity::ok)
 				.orElse(ResponseEntity.notFound().build());
 	}
+
+	@GetMapping("")
+	public ResponseEntity<List<ShareProfileDto>> getAllShareProfiles(ShareProfileQuery query) {
+		return ResponseEntity.ok(shareProfileMapper.toDto(shareProfileService.getAllShareProfiles(query)));
+	}
+
+	@DeleteMapping("/{id}")
+	public ResponseEntity<Void> deleteShareProfile(@PathVariable UUID id) {
+		shareProfileService.deleteShareProfile(id);
+		return ResponseEntity.noContent().build();
+	}
+
 }
